--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "docs",
-            "baseHref": "/player-analyser",
+            "baseHref": "/player-analyzer",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
