--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@supabase/supabase-js": "^2.45.0",
+    "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
+    "postcss": "^8.4.40",
     "primeng": "^17.18.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
