--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "^8.4.40",
     "primeng": "^17.18.6",
     "rxjs": "~7.8.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
