--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@supabase/supabase-js": "^2.45.0",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
+    "overlayscrollbars": "^2.10.0",
     "postcss": "^8.4.40",
     "primeng": "^17.18.6",
     "rxjs": "~7.8.0",
+    "simplebar": "^6.2.7",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.7",
     "tslib": "^2.3.0",
